[gd_scene load_steps=12 format=2]

[ext_resource path="res://enemies/Boss/PirateBoss/Salvo.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tec/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Tec/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://enemies/Boss/PirateBoss/Gun.tscn" type="PackedScene" id=4]
[ext_resource path="res://enemies/Boss/UI/BossUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemies/Boss/PirateBoss/Pulse.tscn" type="PackedScene" id=6]
[ext_resource path="res://player/Exhaust.tscn" type="PackedScene" id=7]
[ext_resource path="res://enemies/Boss/PirateBoss/PirateBoss.gd" type="Script" id=8]
[ext_resource path="res://img/Pirate_Boss.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="PirateBoss" type="Node2D"]
script = ExtResource( 8 )

[node name="BossUI" parent="." instance=ExtResource( 5 )]

[node name="Body" type="KinematicBody2D" parent="."]
position = Vector2( 0, -40 )

[node name="AnimHit" type="AnimationPlayer" parent="Body"]
anims/RESET = SubResource( 1 )
anims/hit = SubResource( 2 )

[node name="Exhaust" parent="Body" instance=ExtResource( 7 )]
position = Vector2( 0, -36 )
rotation = 3.14159
scale = Vector2( 1.2, 1.5 )

[node name="Sprite" type="Sprite" parent="Body"]
scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 9 )

[node name="Hitbox" parent="Body" instance=ExtResource( 2 )]
visible = false
collision_mask = 8

[node name="CP" type="CollisionPolygon2D" parent="Body/Hitbox"]
polygon = PoolVector2Array( -1, 37, -11, 22, -38, 22, -48, 16, -48, 10, -12, -10, -12, -16, -21, -25, -21, -29, -17, -34, -5, -35, 5, -35, 17, -34, 21, -29, 21, -25, 12, -15, 12, -10, 48, 10, 48, 16, 38, 22, 11, 22, 1, 37 )

[node name="Hurtbox" parent="Body" instance=ExtResource( 3 )]
visible = false
collision_layer = 16

[node name="CP" type="CollisionPolygon2D" parent="Body/Hurtbox"]
polygon = PoolVector2Array( -1, 37, -11, 22, -38, 22, -48, 16, -48, 10, -12, -10, -12, -16, -21, -25, -21, -29, -17, -34, -5, -35, 5, -35, 17, -34, 21, -29, 21, -25, 12, -15, 12, -10, 48, 10, 48, 16, 38, 22, 11, 22, 1, 37 )

[node name="MoveTimer" type="Timer" parent="Body"]
one_shot = true

[node name="DeathTimer" type="Timer" parent="Body"]

[node name="Gun" parent="Body" instance=ExtResource( 4 )]
position = Vector2( 0, -2 )

[node name="Salvo" parent="Body/Gun" instance=ExtResource( 1 )]
position = Vector2( 10, 0 )

[node name="Pulse" parent="Body" instance=ExtResource( 6 )]

[node name="PosExplosions" type="Position2D" parent="Body"]

[connection signal="area_entered" from="Body/Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="hit" from="Body/Hurtbox" to="." method="_on_Hurtbox_hit"]
[connection signal="timeout" from="Body/MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="Body/DeathTimer" to="." method="_on_DeathTimer_timeout"]
